--- a/src/views/files/upload.ejs
+++ b/src/views/files/upload.ejs
@@ -24,7 +24,7 @@
           <p>Uploading to: <strong class="font-semibold"><%= folderName || 'Selected Folder' %></strong></p>
         </div>
       <% } else { %>
-        <input type="hidden" name="folderId" value="none">
+        <input type="hidden" name="folderId" value="">
         <div class="p-3 bg-gray-50 border border-gray-200 rounded-lg text-sm text-gray-700 font-medium">
           <p>Uploading to: <strong class="font-semibold">Root Directory</strong></p>
         </div>
