--- a/src/views/files/public-show.ejs
+++ b/src/views/files/public-show.ejs
@@ -34,7 +34,7 @@
       
       <% if (file.mimeType.startsWith('image/')) { %>
         <div class="max-h-[50vh] overflow-hidden rounded-lg shadow-lg border border-gray-300">
-          <img src="/files/download/<%= file.id %>" alt="<%= file.name %> preview" class="max-w-full h-auto mx-auto object-contain">
+          <img src="/shared/public/<%= sharedToken %>/download/<%= file.id %>" alt="<%= file.name %> preview" class="max-w-full h-auto mx-auto object-contain">
         </div>
         <p class="text-sm text-gray-500 mt-3">Click 'Download' for full resolution.</p>
 
@@ -70,7 +70,7 @@
       </div>
 
       <div class="md:col-span-2 flex flex-col justify-end space-y-3">
-        <a href="/files/download/<%= file.id %>" 
+        <a href="/shared/public/<%= sharedToken %>/download/<%= file.id %>" 
            class="w-full inline-flex items-center justify-center px-6 py-3 bg-green-600 text-white text-lg font-semibold rounded-lg shadow-lg hover:bg-green-700 transition focus:outline-none focus:ring-4 focus:ring-green-300 gap-2">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
